dataset1235/2025-2/805158916/users/2931402603/executions/2118643220_2011582555.log
== RUN (2025-09-01 14:05:14)
-- CODE: 
from math import tan, pi

lado = float(input("comprimento do lado do hexagono: "))
apotema = lado / (2 * tan pi/6)
area = 3 * lado * apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan pi/6)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan pi/6)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan pi/6)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan pi/6)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan pi/6)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * tan pi/6)
                      ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:05:50)
-- CODE: 
from math import tan, pi

lado = float(input("comprimento do lado do hexagono: "))
apotema = lado / (2 * tan(pi/6))
area = 3 * lado * apotema
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
comprimento do lado do hexagono: 127.31
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
comprimento do lado do hexagono: 64.95
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
comprimento do lado do hexagono: 41.57
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
comprimento do lado do hexagono: 93.53
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
comprimento do lado do hexagono: 23.38
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
comprimento do lado do hexagono: 166.28
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:04:14)
-- CODE: 
from math import tan, pi

lado = float(input("comprimento do lado do hexagono: "))
apotema = lado / (2 * tan * pi/6)
area = 3 * lado * apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * tan * pi/6)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * tan * pi/6)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * tan * pi/6)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * tan * pi/6)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * tan * pi/6)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado / (2 * tan * pi/6)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
